Add new monocular support
